                                                         -*- coding: utf-8 -*-
  Changes with Apache Traffic Server 3.3.3


  *) [TS-1896] Cleanup of unused defines, sometimes duplicated.

  *) [TS-374] Reduce lock contention in HostDB.

  *) [TS-1899] strtod() does not honor Hex strings on Solaris.

  *) [TS-1894] madvise() not found on Solaris. And some cleanup.

  *) [TS-1765] Make jtest build more like the rest of the code.

  *) [TS-1892] Move msync APIs to ink_memory.h.

  *) [TS-1890] Authproxy plugin caching and reliability fixes.

  *) [TS-1868] TSREMAP_*_STOP does not stop remap plugin evaluation chain.

  *) [TS-1889] Refactor remap plugin request URL handling.

  *) [TS-1887] Make diagnostic location logging more succinct.

  *) [TS-1884] Remove deprecated IPv4-only NetProcessor API.

  *) [TS-1444] [TS-1881] URL lookup with regex through the web interface was broken.

  *) [TS-1880] Use pthread_setname_np to set the thread name on multiple platforms.

  *) [TS-1879] Make the Ptr<> conversion constructor explicit.

  *) [TS-1768] Prefer AC_SEARCH_LIBS to AC_CHECK_LIB to avoid unnecessary linking.

  *) [TS-1877] Fix multiple Lua remap plugin instance creation.

  *) [TS-1770] Unable to create remap rule for SSL sites when accessed as a
   forward proxy. Author: Mark Harrison.

  *) [TS-1867] The combo_handler plugin crashes when receiving non-200 responses.
    Author: Conan Wang <conanmind@gmail.com>

  *) [TS-1838] Improve configure.ac to recognize compiler setup better.

  *) [TS-1865] Support DESTDIR in tsxs.

  *) [TS-1864] Illumos / OmniOS needs -m64 with gcc to compile properly on
   64-bit platforms. We also only support ATS on 64-bit Illumos.

  *) [TS-1811] Make the HostDB sizes variable on the SRV enabled config.
   This restores compatibility with HostDB's prior to v3.3.1.

  *) [TS-1843] Detect and link libhwloc on Ubuntu.

  *) [TS-1858] Fix redefinition of timersub on Solaris.

  *) [TS-1861] Build fails with reclaimable freelist enabled.